chore: adds redirects

--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,9 @@
 {
-  "public": true
+  "public": true,
+  "redirects": [
+    {
+      "source": "/:path*",
+      "destination": "/pt-BR/:path*"
+    }
+  ],
 }
