fix: fix vercel.json try 1

--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,9 @@
   "public": true,
   "redirects": [
     {
-      "source": "/:path*",
-      "destination": "/pt-BR/:path*"
+      "source": "/:path(.*)",
+      "destination": "/pt-BR/:path(.*)",
+      "permanent": true
     }
   ]
 }
