--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "redirects": [
     {
       "source": "/:path(.*)",
-      "destination": "/pt-BR/:path(.*)",
+      "destination": "/pt-BR/:path",
       "permanent": true
     }
   ]
